--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -117,6 +117,10 @@ jemalloc-prof = [
     "reth-cli-util/jemalloc-prof",
     "reth-ethereum-cli/jemalloc-prof",
 ]
+jemalloc-symbols = [
+    "jemalloc-prof",
+    "reth-ethereum-cli/jemalloc-symbols",
+]
 jemalloc-unprefixed = [
     "reth-cli-util/jemalloc-unprefixed",
     "reth-node-core/jemalloc",
