--- a/crates/net/network-api/Cargo.toml
+++ b/crates/net/network-api/Cargo.toml
@@ -42,6 +42,7 @@ derive_more.workspace = true
 [features]
 serde = [
     "dep:serde",
+    "reth-eth-wire/serde",
     "reth-eth-wire-types/serde",
     "reth-network-types/serde",
     "alloy-primitives/serde",
