--- a/Cargo.toml
+++ b/Cargo.toml
@@ -748,42 +748,42 @@ vergen-git2 = "9.1.0"
 ipnet = "2.11"
 
 [patch.crates-io]
-alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-contract = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-eips = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-genesis = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-network = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-provider = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-serde = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-signer = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-transport = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
-
-op-alloy-consensus = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
-op-alloy-network = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
-op-alloy-rpc-types = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
-op-alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
-op-alloy-rpc-jsonrpsee = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
-
-alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "main" }
-alloy-op-evm = { git = "https://github.com/alloy-rs/evm", branch = "main" }
+#alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-contract = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-eips = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-genesis = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-network = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-provider = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-serde = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-signer = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-transport = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
+#
+#op-alloy-consensus = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
+#op-alloy-network = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
+#op-alloy-rpc-types = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
+#op-alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
+#op-alloy-rpc-jsonrpsee = { git = "https://github.com/alloy-rs/op-alloy", branch = "main" }
+#
+#alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "main" }
+#alloy-op-evm = { git = "https://github.com/alloy-rs/evm", branch = "main" }
 
 # revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "1207e33" }
 
