--- a/crates/stages/stages/Cargo.toml
+++ b/crates/stages/stages/Cargo.toml
@@ -119,6 +119,7 @@ test-utils = [
     "reth-evm-ethereum/test-utils",
 ]
 rocksdb = ["reth-provider/rocksdb"]
+edge = ["reth-provider/edge", "rocksdb"]
 
 [[bench]]
 name = "criterion"
