--- a/Cargo.toml
+++ b/Cargo.toml
@@ -806,18 +806,18 @@ alloy-transport-ws = { git = "https://github.com/Soubhik-10/alloy", branch = "ei
 # op-alloy-rpc-jsonrpsee = { git = "https://github.com/alloy-rs/op-alloy", rev = "a79d6fc" }
 #
 revm-inspectors = { git = "https://github.com/Rimeeeeee/revm-inspectors", branch = "bal-devnet-1" }
-# revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-alloy-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "bal-devnet-2" }
-alloy-op-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "bal-devnet-2" }
-# revm-bytecode = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-database = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-state = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-context = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-context-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# revm-database-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-# op-revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+alloy-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "eip7843" }
+alloy-op-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "eip7843" }
+revm-bytecode = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-database = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-state = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-primitives = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-interpreter = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-context = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-context-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+revm-database-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
+op-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "eip7843" }
 #
 # jsonrpsee = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
 # jsonrpsee-core = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
