--- a/crates/engine/util/Cargo.toml
+++ b/crates/engine/util/Cargo.toml
@@ -24,6 +24,7 @@ reth-storage-api.workspace = true
 reth-payload-primitives.workspace = true
 
 # alloy
+alloy-primitives.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-consensus.workspace = true
 
