--- a/.github/workflows/hive.yml
+++ b/.github/workflows/hive.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Checkout hive tests
         uses: actions/checkout@v6
         with:
-          repository: fselmo/hive
-          ref: fix/update-bpo2-defaults
+          repository: ethereum/hive
+          ref: master
           path: hivetests
 
       - name: Get hive commit hash
@@ -226,8 +226,8 @@ jobs:
       - name: Checkout hive tests
         uses: actions/checkout@v6
         with:
-          repository: fselmo/hive
-          ref: fix/update-bpo2-defaults
+          repository: ethereum/hive
+          ref: master
           path: hivetests
 
       - name: Run simulator
