test: add direct RocksDB table assertions to e2e test
Amp-Thread-ID: https://ampcode.com/threads/T-019bf9e8-2c68-7190-8afd-b1387b4e61b0

--- a/crates/e2e-test-utils/Cargo.toml
+++ b/crates/e2e-test-utils/Cargo.toml
@@ -79,4 +79,4 @@ path = "tests/rocksdb/main.rs"
 required-features = ["edge"]
 
 [features]
-edge = ["reth-node-core/edge"]
+edge = ["reth-node-core/edge", "reth-provider/rocksdb", "reth-cli-commands/edge"]
