--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -33,7 +33,6 @@ derive_more.workspace = true
 futures-util.workspace = true
 metrics = { workspace = true, optional = true }
 rayon = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
 
 [dev-dependencies]
 reth-ethereum-primitives.workspace = true
@@ -57,9 +56,8 @@ std = [
     "reth-storage-api/std",
     "reth-trie-common/std",
     "reth-ethereum-primitives/std",
-    "tracing?/std",
 ]
-metrics = ["std", "dep:metrics", "dep:reth-metrics", "dep:tracing"]
+metrics = ["std", "dep:metrics", "dep:reth-metrics"]
 test-utils = [
     "reth-primitives-traits/test-utils",
     "reth-trie-common/test-utils",
