perf: use FxHashMap in BlockBuffer

--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -69,6 +69,7 @@ tracing.workspace = true
 derive_more.workspace = true
 parking_lot.workspace = true
 crossbeam-channel.workspace = true
+rustc-hash.workspace = true
 
 # optional deps for test-utils
 reth-prune-types = { workspace = true, optional = true }
