--- a/crates/chainspec/Cargo.toml
+++ b/crates/chainspec/Cargo.toml
@@ -29,6 +29,7 @@ alloy-consensus.workspace = true
 auto_impl.workspace = true
 serde_json.workspace = true
 derive_more.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 # eth
@@ -62,6 +63,4 @@ arbitrary = [
     "alloy-primitives/arbitrary",
     "alloy-trie/arbitrary",
 ]
-test-utils = [
-    "reth-primitives-traits/test-utils",
-]
+test-utils = ["reth-primitives-traits/test-utils"]
