fix(prune): respect rocksdb storage settings for history pruning

--- a/crates/prune/prune/Cargo.toml
+++ b/crates/prune/prune/Cargo.toml
@@ -51,3 +51,7 @@ reth-testing-utils.workspace = true
 reth-tracing.workspace = true
 
 assert_matches.workspace = true
+
+[features]
+default = []
+rocksdb = ["reth-provider/rocksdb"]
