--- a/crates/storage/db-common/Cargo.toml
+++ b/crates/storage/db-common/Cargo.toml
@@ -46,7 +46,8 @@ reth-db = { workspace = true, features = ["mdbx"] }
 reth-provider = { workspace = true, features = ["test-utils"] }
 
 [features]
-edge = ["reth-db-api/edge", "reth-provider/rocksdb"]
+rocksdb = ["reth-db-api/rocksdb", "reth-provider/rocksdb"]
+edge = ["rocksdb"]
 
 [lints]
 workspace = true
