--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ members = [
     "examples/custom-rlpx-subprotocol",
     "examples/custom-rpc-middleware",
     "examples/db-access",
+    "examples/engine-persistence-threshold",
     "examples/exex-subscription",
     "examples/exex-test",
     "examples/full-contract-state",
